create or update : basic of webassembly

--- a/Presentations/Client.WebAssembly/wwwroot/index.html
+++ b/Presentations/Client.WebAssembly/wwwroot/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="Client.WebAssembly.styles.css" rel="stylesheet" />
+    <link href="css/chat/chat_group_styles.css" rel="stylesheet" />
+    <link href="css/chat/dashboard.css" rel="stylesheet" />
+    <link href="css/shared.css" rel="stylesheet" />
 </head>
 
 <body>
